# coffee

./: .gitmodules  .travis.yml  AOsystSim.c  AOsystSim.h  CMakeLists.txt  Dockerfile  Makefile.am  Makefile.in  OptSystProp.c  OptSystProp_propagateCube.c  OptSystProp_run.c  README.md  coronagraphs.c  coronagraphs.h
.github/workflows/: cmake.yml  docker-image.yml
AOsystSim/: AOsystSim.c  AOsystSim.h  CMakeLists.txt  README.md
OptSystProp/: CMakeLists.txt  OptSystProp.c  OptSystProp.h  OptSystProp_propagateCube.c  OptSystProp_run.c  README.md
PIAACMCsimul/: CMakeLists.txt  PIAACMC_FPM_process.c  PIAACMC_FPMresp_resample.c  PIAACMC_FPMresp_rmzones.c  PIAACMC_f_evalmask.c  PIAACMC_f_evalmask.h  PIAACMCsimul.c  PIAACMCsimul.h  PIAACMCsimul_CA2propCubeInt.c  PIAACMCsimul_CA2propCubeInt.h  PIAACMCsimul_achromFPMsol_eval.c  PIAACMCsimul_achromFPMsol_eval.h  PIAACMCsimul_achromFPMsol_eval_zonezderivative.c  PIAACMCsimul_achromFPMsol_eval_zonezderivative.h  PIAACMCsimul_computePSF.c  PIAACMCsimul_computePSF.h  PIAACMCsimul_eval_poly_design.c  PIAACMCsimul_eval_poly_design.h  PIAACMCsimul_exec.c  PIAACMCsimul_exec.h  PIAACMCsimul_exec_computePSF_no_fpm.c  PIAACMCsimul_exec_compute_image.c  PIAACMCsimul_exec_multizone_fpm_calib.c  PIAACMCsimul_exec_optimize_PIAA_shapes.c  PIAACMCsimul_exec_optimize_PIAA_shapes_fpmtransm.c  PIAACMCsimul_exec_optimize_fpm_zones.c  PIAACMCsimul_exec_optimize_fpmtransmission.c  PIAACMCsimul_exec_optimize_lyot_stop_position.c  PIAACMCsimul_exec_optimize_lyot_stops_shapes_positions.c  PIAACMCsimul_free.c  PIAACMCsimul_geomProp.c  PIAACMCsimul_init.c  PIAACMCsimul_init.h  PIAACMCsimul_init_geomPIAA_rad.c  PIAACMCsimul_initpiaacmcconf.c  PIAACMCsimul_initpiaacmcconf.h  PIAACMCsimul_load2DRadialApodization.c  PIAACMCsimul_loadsavepiaacmcconf.c  PIAACMCsimul_loadsavepiaacmcconf.h  PIAACMCsimul_makePIAAshapes.c  (+23 more)
PIAACMCsimul/FocalPlaneMask/: FPM_process.c  FPM_process.h  FPMresp_resample.c  FPMresp_resample.h  FPMresp_rmzones.c  FPMresp_rmzones.h  exec_multizone_fpm_calib.c  exec_multizone_fpm_calib.h  exec_optimize_fpm_zones.c  exec_optimize_fpm_zones.h  exec_optimize_fpmtransmission.c  exec_optimize_fpmtransmission.h  mkFPM_zonemap.c  mkFPM_zonemap.h  mkFocalPlaneMask.c  mkFocalPlaneMask.h  rings2sectors.c  rings2sectors.h
PIAACMCsimul/LyotStop/: exec_optimize_lyot_stop_position.c  exec_optimize_lyot_stop_position.h  exec_optimize_lyot_stops_shapes_positions.c  exec_optimize_lyot_stops_shapes_positions.h  geomProp.c  geomProp.h  mkLyotMask.c  mkLyotMask.h  mkSimpleLyotStop.c  mkSimpleLyotStop.h  optimizeLyotStop.c  optimizeLyotStop.h
PIAACMCsimul/PIAAshape/: exec_optimize_PIAA_shapes.c  exec_optimize_PIAA_shapes.h  init_geomPIAA_rad.c  init_geomPIAA_rad.h  load2DRadialApodization.c  load2DRadialApodization.h  makePIAAshapes.c  makePIAAshapes.h  mkPIAAMshapes_from_RadSag.c  mkPIAAMshapes_from_RadSag.h
PIAACMCsimul/doc/: PIAACMCsimul_Ccode.md  PIAACMCsimul_DesignSteps_Mono.md  PIAACMCsimul_DesignSteps_Poly.md  PIAACMCsimul_GettingStarted.md  PIAACMCsimul_Introduction.md
PIAACMCsimul/docdir/: PIAACMCsimul.html  PIAACMCsimul.md.post  PIAACMCsimul_script_run.html  PIAACMCsimul_script_run.md  PIAACMCsimul_script_run.md.post  PIAACMCsimul_script_runPIAACMC.html  PIAACMCsimul_script_runPIAACMC.md  PIAACMCsimul_script_runPIAACMC.md.post  PIAACMCsimul_script_runopt.html  PIAACMCsimul_script_runopt.md  PIAACMCsimul_script_runopt.md.post  PIAACMCsimul_script_sim.html  PIAACMCsimul_script_sim.md  PIAACMCsimul_script_sim.md.post
PIAACMCsimul/docdir/figures/: mkfigs  runPIAACMCsteps.dot  scripts_flow.dot
PIAACMCsimul/examples/: LUVOIRpup4096.txt  mkLUVOIRpup  mkMagAOXpup  mkSubPup  setup_SPEED  setup_SPEED1024  setup_SPEED1024_noinvPIAA
PIAACMCsimul/examples/archive/: exampleAPLCMC  examplePIAACMC  examplePIAACMC_3ringsSegAper  examplePIAACMC_Subaru1024  examplePIAACMC_gmt1024
PIAACMCsimul/scripts/: coffee-optloop  coffee-run  coffee-runPIAACMC  coffee-runPIAACMCdesign  coffee-runclean  coffee-runopt  coffee-setconf  coffee-sim  coffee-syncscripts
coronagraphs/: CMakeLists.txt  coronagraphs.c  coronagraphs.h
coronagraphs/scripts/: coffee
src/: CLImain.c
